--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <h1>bem vindo</h1>
+<!DOCTYPE html>
+ <head>
+    <style>
+      body{
+        background-color: black;
+      color:white;
+      }
+      </style>
+ </head>
+<body>
+ <div>
+   <div></div>
+<h3>Colégio josé Alexandre Chiarelli</h3> 
+ </div>
+ </body>
+ </html>
+   
